--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -24,10 +24,58 @@
         ul{
             li{
                 list-style: none;
-                
+                display: flex;
+                align-items: center;
+                padding: 5px;
+                cursor: pointer;
+                &:hover{
+                    background-color: #ece8ff;
+                }
+
+                .icon{
+                    font-size: 18px;
+                    color:#7451f8;
+                }
+                span{
+                  font-size: 13px;
+                  font-weight: 600px;
+                  color: #888;
+                  margin-left: 10px;
+
+                }
             }
             padding: 0;
             margin: 0;
+
+            .title{
+                font-size: 10px;
+                font-weight: bold;
+                color: #999;
+                margin-top: 15px;
+                margin-bottom: 5px;
+            }
+        }
+    }
+
+    .bottom{
+        display: flex;
+        align-items: center;
+        margin: 10px;
+
+        .colorOPtion{
+            width: 20px;
+            height: 20px;
+            border-radius: 5px;
+            border:1px solid #7451f8;
+            margin: 5px;
+
+            &:nth-child(1){
+                background-color: white;
+            }
+            &:nth-child(2){
+                background-color: #333;
+            }
+            
         }
     }
 }
