--- a/src/widget/widget.scss
+++ b/src/widget/widget.scss
@@ -4,11 +4,17 @@
     box-shadow: 2px 0px 23px 9px rgba(185,219,148,1);
     -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
     -moz-box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
-   justify-content: space-between;
-   border-radius: 10px;
-   height: 100px;
+     justify-content: space-between;
+      border-radius: 10px;
+     height: 100px;
+     padding-left: 10px;
    .left{
-
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+     padding-bottom: 5px;
+     padding-top: 10px;
+     
 
     .title{
         font-size: 14px;
@@ -25,8 +31,34 @@
        font-size: 12px; 
        border-bottom: 1px solid gray; 
     }
+   
+   }
+   .right{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 10px;
+
+
     .percentage{
         display: flex;
+        align-items: center;
+        font-size: 14px;
+        &.positive{
+            color: green;
+        }
+
+        &.negative{
+            color: red;
+        }
+    }
+
+    .icon{
+        font-size: 18px;
+        padding: 5px;
+        background-color: rgba(128,0,128,0.541);
+        border-radius: 5px;
+        margin-bottom: 5px;
     }
    }
 
