--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -3,4 +3,54 @@
     box-shadow: 2px 0px 23px 9px rgba(185,219,148,1);
     -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
     -moz-box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    color: gray;
+
+  .top{
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+    width: 100%;
+   
+
+    .title{
+        font-size: 16px;
+        font-weight: 500;
+    }
+
+  }
+
+  .bottom{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  gap: 15px;
+
+  .featuredChart{
+    width: 100px;
+    height: 100px;
+  }
+ 
+    .title{
+        font-weight: 100;
+        color: gray;
+    }
+    .amount{
+        font-size: 30px;
+    }
+  
+    .desc{
+        font-weight: 300;
+        font-size: 12px;
+        color: gray;
+        text-align: center;
+    }
+}
 }
