--- a/src/widget/widget.scss
+++ b/src/widget/widget.scss
@@ -7,7 +7,7 @@
      justify-content: space-between;
       border-radius: 10px;
      height: 100px;
-     padding-left: 10px;
+     padding: 15px;
    .left{
      display: flex;
      flex-direction: column;
