--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -7,6 +7,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        
 
         .logo{
             
@@ -16,8 +17,10 @@
             height: 50px;
             width: 50px;
             border-radius: 50%;
+           
             .patsitech{
                 border-radius: 50%;
+                color: green;
             }
         }
     }
