--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,5 +13,12 @@
         .charts{
             padding: 5px 20px;
         }
+        .listContainer{
+            box-shadow: 2px 0px 23px 9px rgba(185,219,148,1);
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+            -moz-box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
+            padding: 20px;
+            margin: 20px
+        }
     }
 }
